--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Publish JS filename
         id: publish
         run: |
-          find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT';'
+          find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
           echo '$GITHUB_OUTPUT'
           cat '$GITHUB_OUTPUT'
       - name: Upload artifacts
@@ -50,8 +50,8 @@ jobs:
         with:
           name: dist-files
       - name: Output contents
-        run: |
-          pwd
-          ls
+        run: ls
+      - name: Output filename
+        run: echo "${{ needs.build.outputs.script-file }}"
       - name: Deploy
         run: echo "Deploying..."
