--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -31,8 +31,7 @@ jobs:
         id: publish
         run: |
           find dist/assets/*.js -type f -execdir echo 'script-file={}' >> $GITHUB_OUTPUT ';'
-          echo '$GITHUB_OUTPUT'
-          cat '$GITHUB_OUTPUT'
+          echo 'output destination: $GITHUB_OUTPUT'
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
